adjust css to fix spacing

--- a/css/01-JSDrumKit.css
+++ b/css/01-JSDrumKit.css
@@ -27,7 +27,7 @@ body {
 
 #keyboard {
   min-width: 750px;
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
 }
 
